[tool.black]
line-length = 99
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "inst-load-pics"
version = "0.1.0"
description = "Load Instagram pics and send as albums"
authors = ["Suren Khorenyan <surenkhorenyan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
instaloader = "^4.8.1"
aiogram = "^2.15"
aiohttp = "3.7.4"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
